Update Merged data EDA 7차.ipynb

--- a/Merged data EDA 7차.ipynb
+++ b/Merged data EDA 7차.ipynb
@@ -2120,7 +2120,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3978,60 +3980,144 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# 다른 방식의 로지스틱회귀분석"
+    "x = df[['출항_적재톤수', '양하톤수', '작업시간']]  #변수 지정\n",
+    "y = df[['고지금액']]\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "endog must be in the unit interval.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-98-196f36d4cd1d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapi\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mlogit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLogit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'고지금액'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#로지스틱 회귀분석 시행\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\statsmodels\\discrete\\discrete_model.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, endog, exog, check_rank, **kwargs)\u001b[0m\n\u001b[0;32m    457\u001b[0m         if (not issubclass(self.__class__, MultinomialModel) and\n\u001b[0;32m    458\u001b[0m                 not np.all((self.endog >= 0) & (self.endog <= 1))):\n\u001b[1;32m--> 459\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"endog must be in the unit interval.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    460\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    461\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexog\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlinear\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: endog must be in the unit interval."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학습용 데이터셋 정확도 : 0.01\n",
+      "검증용 데이터셋 정확도 : 0.00\n"
      ]
     }
    ],
    "source": [
-    "import statsmodels.api as sm\n",
-    "logit = sm.Logit(df[['고지금액']],x) #로지스틱 회귀분석 시행\n",
-    "result = logit.fit()"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "log = LogisticRegression() #로지스틱 회귀분석 시행\n",
+    "\n",
+    "log.fit(x_train, y_train) #모델의 정확도 확인\n",
+    "print(f'학습용 데이터셋 정확도 : %.2f' % log.score(x_train, y_train))\n",
+    "print(f'검증용 데이터셋 정확도 : %.2f' % log.score(x_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.summary2()"
+    "x = df[['출항_적재톤수', '화물보안료', '화물료']]  #변수 지정\n",
+    "y = df[['고지금액']]\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학습용 데이터셋 정확도 : 0.01\n",
+      "검증용 데이터셋 정확도 : 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "log = LogisticRegression() #로지스틱 회귀분석 시행\n",
+    "\n",
+    "log.fit(x_train, y_train) #모델의 정확도 확인\n",
+    "print(f'학습용 데이터셋 정확도 : %.2f' % log.score(x_train, y_train))\n",
+    "print(f'검증용 데이터셋 정확도 : %.2f' % log.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.exp(result.params)"
+    "x = df[['출항_적재톤수', '화물보안료', '화물료', '작업시간']]  #변수 지정\n",
+    "y = df[['고지금액']]\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학습용 데이터셋 정확도 : 0.01\n",
+      "검증용 데이터셋 정확도 : 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "log = LogisticRegression() #로지스틱 회귀분석 시행\n",
+    "\n",
+    "log.fit(x_train, y_train) #모델의 정확도 확인\n",
+    "print(f'학습용 데이터셋 정확도 : %.2f' % log.score(x_train, y_train))\n",
+    "print(f'검증용 데이터셋 정확도 : %.2f' % log.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = df[['출항_적재톤수', '화물보안료', '화물료', '작업시간', '총톤수', '양하톤수', '출항_적하톤수']]  #변수 지정\n",
+    "y = df[['고지금액']]\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학습용 데이터셋 정확도 : 0.01\n",
+      "검증용 데이터셋 정확도 : 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "log = LogisticRegression() #로지스틱 회귀분석 시행\n",
+    "\n",
+    "log.fit(x_train, y_train) #모델의 정확도 확인\n",
+    "print(f'학습용 데이터셋 정확도 : %.2f' % log.score(x_train, y_train))\n",
+    "print(f'검증용 데이터셋 정확도 : %.2f' % log.score(x_test, y_test))"
+   ]
   },
   {
    "cell_type": "code",
